--- a/src/lib/dune
+++ b/src/lib/dune
@@ -24,6 +24,14 @@
  (modules jsonrpc)
  (libraries rpclib.core yojson)
  (wrapped false))
+ 
+(library
+ (name csexprpc)
+ (public_name rpclib.csexp)
+ (modules csexprpc)
+ (libraries rpclib.core csexp sexplib0)
+ (lint (pps ppx_sexp_conv))
+)
 
 (library
  (name cmdlinergen)
